# codes

./: .clang-format  .clangd  .editorconfig  .envrc  .eslintrc.json  .gitattributes  .gitignore  .npmignore  .pep8  .prettierignore  .prettierrc.json  .pylintrc  .rubocop.yml  .scalafmt.conf  .test  BUCK  BUILD.bazel  Cargo.toml  Directory.Build.props  Gemfile  Makefile  Package.swift  README.md  Rakefile  alire.toml  analysis_options.yaml  build.gradle  build.sbt  bun.lockb  cabal.project  codes.cabal  codes.gemspec  codes.gpr  codes.nimble  codes.opam  codes.sln  composer.json  config.gpr  dub.json  dub.sdl  (+27 more)
.cargo/: config.toml
ada/fibonacci/: fibonacci.adb
ada/hello/: hello.adb  project.gpr
c#/fibonacci/: Directory.Build.props  README.md  c#-fibonacci.csproj  cs-fibonacci.csproj  fibonacci.cs  fibonacci.csproj
c#/fibonacci/src/: fibonacci.cs
c#/greeter/: Directory.Build.props  README.md  c#-greeter.csproj  cs-greeter.csproj  greeter.cs
c#/greeter/src/: greeter.cs
c#/hello/: Directory.Build.props  README.md  c#-hello.csproj  hello.csproj
c#/hello/src/: hello.cs
c++/fibonacci/: BUCK  BUILD.bazel  Makefile  README.md  fibonacci.cpp
c++/fibonacci/src/: fibonacci.cpp
c++/greeter/: BUCK  BUILD.bazel  Makefile  README.md  greeter.cpp
c++/greeter/src/: greeter.cpp
c++/hello/: BUCK  BUILD.bazel  Makefile  README.md  hello.cpp
c++/message/: BUCK  README.md
c++/random/: BUILD.bazel  Makefile  README.md
c++/random/src/: randomNumberGame.cpp
c/fibonacci/: BUCK  BUILD.bazel  Makefile  README.md  main.c
c/fibonacci/src/: fibonacci.c
c/greeter/: BUCK  BUILD.bazel  Makefile  README.md
c/greeter/src/: greeter.c
c/hello/: BUCK  BUILD.bazel  Makefile  README.md
c/hello/src/: hello.c
cuda/hello/: Makefile  README.md
cuda/hello/src/: hello.cu
d/fibonacci/: README.md  dub.json  dub.sdl  fibonacci.d
d/greeter/: README.md  dub.json  dub.sdl  dub.settings.json  main.d
d/hello/: CHANGELOG.md  README.md  dub.json  dub.sdl  dub.settings.json
dart/fibonacci/: README.md  pubspec.yaml
dart/greeter/: README.md  pubspec.yaml
dart/hello/: README.md  pubspec.yaml
elixir/fibonacci/: README.md  mix.exs  run.exs
elixir/greeter/: README.md  mix.exs  run.exs
elixir/hello/: README.md  mix.exs  run.exs
f#/fibonacci/: Directory.Build.props  Directory.Build.targets  README.md  f#-fibonacci.fsproj
f#/hello/: Directory.Build.props  Directory.Build.targets  README.md  f#-hello.fsproj
fortran/greeter/: README.md  fpm.toml
fortran/hello/: README.md  fpm.toml  hello.f90
go/fibonacci/: fibonacci.go  go.mod
go/greeter/: go.mod  greeter.go
go/hello/: go.mod  hello.go
groovy/fibonacci/: README.md  build.gradle  build.gradle.kts  pom.xml
groovy/greeter/: README.md  pom.xml
groovy/hello/: README.md  build.gradle  build.gradle.kts  pom.xml
haskell/fibonacci/: BUCK  Main.hs  README.md  haskell-fibonacci.cabal  main.hs  package.yaml
haskell/greeter/: BUCK  Main.hs  README.md  haskell-greeter.cabal  package.yaml
haskell/hello/: BUCK  Main.hs  README.md  haskell-hello.cabal  hello.hs  package.yaml
java/fibonacci/: BUILD.bazel  README.md  build.gradle  build.gradle.kts  pom.xml
java/greeter/: BUILD.bazel  README.md  build.gradle  pom.xml
java/hello/: BUILD.bazel  Hello.java  README.md  build.gradle  build.gradle.kts  pom.xml
java/message/: BUILD.bazel  README.md  build.gradle  pom.xml
java/random/: BUILD.bazel  README.md  build.gradle  pom.xml
javascript/fibonacci/: LICENSE  README.md  fibonacci.js  index.js  main.js  package.json
javascript/greeter/: README.md  greeter.js  index.js  jsconfig.json  package.json
javascript/hello/: README.md  hello.js  index.js  package.json
kotlin/fibonacci/: README.md  build.gradle  build.gradle.kts  pom.xml
kotlin/greeter/: README.md  build.gradle  pom.xml
kotlin/hello/: README.md  build.gradle  build.gradle.kts  hello.kt  pom.xml
nim/greeter/: greeter.nim
nim/hello/: hello.nim  main.nim
objc/fibonacci/: BUCK  Makefile  README.md
objc/greeter/: BUCK  Makefile  README.md
objc/hello/: BUCK  Makefile  README.md
objective-c/fibonacci/: Makefile
objective-c/greeter/: Makefile  greeter.m
objective-c/hello/: Makefile  hello.m
ocaml/fibonacci/: .ocamlinit  BUCK  README.md  dune-project  ocaml-fibonacci.opam
ocaml/greeter/: .ocamlinit  BUCK  README.md  dune-project  ocaml-greeter.opam
ocaml/greeter/src/: dune  greeter.ml
ocaml/hello/: .ocamlinit  BUCK  README.md  dune-project  hello.ml  ocaml-hello.opam
ocaml/hello/src/: dune
php/fibonacci/: fibonacci.php
php/hello/: hello.php
project/: plugins.sbt
purescript/hello/: README.md  spago.yaml
python/fibonacci/: BUCK  BUILD.bazel  BUILD.pants  README.md  fibonacci.py  pyproject.toml
python/fibonacci/src/python_fibonacci/: __init__.py  fibonacci.py
python/greeter/: BUCK  BUILD.bazel  BUILD.pants  README.md  greeter.py  main.py  pyproject.toml
python/greeter/src/python_greeter/: __init__.py  greeter.py
python/hello/: BUCK  BUILD.bazel  BUILD.pants  README.md  hello.py  pyproject.toml
q#/hello/: Directory.Build.props  Directory.Build.targets  README.md  hello.qs  q#-hello.csproj
ruby/fibonacci/: README.md  Rakefile  ruby-fibonacci.gemspec
ruby/greeter/: README.md  Rakefile  ruby-greeter.gemspec
ruby/hello/: README.md  Rakefile  ruby-hello.gemspec
rust/fibonacci/: BUCK  Cargo.toml  README.md
rust/fibonacci/src/: fibonacci.rs
rust/greeter/: BUCK  Cargo.toml  README.md  greeter.rs  main.rs
rust/greeter/src/: greeter.rs
rust/hello/: BUCK  Cargo.toml  README.md  hello.rs
scala/fibonacci/: README.md  build.gradle  build.sbt  pom.xml
scala/greeter/: README.md  build.gradle.kts  build.sbt  pom.xml
scala/hello/: README.md  build.gradle  build.gradle.kts  build.sbt  pom.xml
swift/fibonacci/: fibonacci.swift
swift/hello/: hello.swift
typescript/fibonacci/: README.md  fibonacci.ts  index.ts  main.ts  package.json
typescript/greeter/: README.md  greeter.ts  index.ts  main.ts  package.json  tsconfig.json
typescript/hello/: README.md  hello.ts  index.ts  package.json  tsconfig.json
(+62 files in other folders)
