alias(
  name = "c++-hello",
  actual = "//c++/hello:c++-hello",
)

alias(
  name = "c++-greeter",
  actual = "//c++/greeter:c++-greeter",
)

alias(
  name = "c++-fibonacci",
  actual = "//c++/fibonacci:c++-fibonacci",
)

alias(
  name = "c-hello",
  actual = "//c/hello:c-hello",
)

alias(
  name = "c-greeter",
  actual = "//c/greeter:c-greeter",
)

alias(
  name = "c-fibonacci",
  actual = "//c/fibonacci:c-fibonacci",
)

alias(
  name = "java-hello",
  actual = "//java/hello:java-hello",
)

alias(
  name = "java-greeter",
  actual = "//java/greeter:java-greeter",
)

alias(
  name = "java-fibonacci",
  actual = "//java/fibonacci:java-fibonacci",
)
