alias(
    name = "c++-hello",
    actual = "//c++/hello:c++-hello",
)

alias(
    name = "c++-greeter",
    actual = "//c++/greeter:c++-greeter",
)

alias(
    name = "c++-fibonacci",
    actual = "//c++/fibonacci:c++-fibonacci",
)

alias(
    name = "c++-random",
    actual = "//c++/random:c++-random",
)

alias(
    name = "c-hello",
    actual = "//c/hello:c-hello",
)

alias(
    name = "c-greeter",
    actual = "//c/greeter:c-greeter",
)

alias(
    name = "c-fibonacci",
    actual = "//c/fibonacci:c-fibonacci",
)

alias(
    name = "java-hello",
    actual = "//java/hello:java-hello",
)

alias(
    name = "java-greeter",
    actual = "//java/greeter:java-greeter",
)

alias(
    name = "java-fibonacci",
    actual = "//java/fibonacci:java-fibonacci",
)

alias(
    name = "java-random",
    actual = "//java/random:java-random",
)

alias(
    name = "java-message",
    actual = "//java/message:java-message",
)

alias(
    name = "python-hello",
    actual = "//python/hello:python-hello",
)

alias(
    name = "python-greeter",
    actual = "//python/greeter:python-greeter",
)

alias(
    name = "python-fibonacci",
    actual = "//python/fibonacci:python-fibonacci",
)
