[workspace]
name = "codes"
resolver = "2"

members = [
  "rust/hello",
  "rust/greeter",
  "rust/fibonacci"
]

[workspace.package]
version = "1.0.0"
authors = ["AlterSabeh"]
edition = "2021"
description = "Repository for My Codes"
repository = "https://github.com/altersabeh/codes"
license = "MIT"
publish = false

[workspace.dependencies]
num-bigint = "0.4"
num-traits = "0.2"
ctrlc = "3.2"
chrono = "0.4"
lazy_static = "1.4.0"
