[workspace]
name = "codes"
resolver = "2"

members = [
  "rust/hello",
  "rust/greeter",
  "rust/fibonacci"
]

[workspace.package]
version = "1.0.0"
description = "Repository for My Codes"
license = "MIT"
repository = "https://github.com/altersabeh/codes"
homepage = "https://github.com/altersabeh/codes#README.md"
authors = ["AlterSabeh"]
categories = ["command-line-utilities"]
edition = "2021"

[workspace.dependencies]
num-bigint = "0.4"
num-traits = "0.2"
ctrlc = "3.2"
chrono = "0.4"
lazy_static = "1.4.0"
