(lang dune 3.7)

(name codes)

(generate_opam_files true)

(source
 (github altersabeh/codes))

(authors "AlterSabeh")

(maintainers "AlterSabeh")

(license LICENSE)

(documentation https://github.com/altersabeh/codes#README.md)

(package
 (name codes)
 (synopsis "Programs")
 (description "Repository for My Codes")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
