(lang dune 3.7)

(generate_opam_files true)

(name ocaml-greeter)

(version 1.0.0)

(license MIT)

(source
 (github altersabeh/codes))

(authors "AlterSabeh")

(maintainers "AlterSabeh")

(documentation https://github.com/altersabeh/codes#README)

(homepage https://github.com/altersabeh/codes#README)

(package
 (name ocaml-greeter)
 (synopsis "An OCaml Program")
 (description "Greeter program written in OCaml")
 (depends ocaml dune)
 (tags
  (command-line-utilities)))
