(lang dune 3.7)

(generate_opam_files true)

(name ocaml-hello)

(version 1.0.0)

(license MIT)

(source
 (github altersabeh/codes))

(authors "AlterSabeh")

(maintainers "AlterSabeh")

(documentation https://github.com/altersabeh/codes#README)

(homepage https://github.com/altersabeh/codes#README)

(package
 (name ocaml-hello)
 (synopsis "An OCaml Program")
 (description "Hello World program written in OCaml")
 (depends ocaml dune)
 (tags
  (command-line-utilities)))
