[package]
name = "rust-fibonacci"
version = "1.0.0"
description = "Fibonacci program written in Rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }
ctrlc = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }

[[bin]]
name = "rust-fibonacci"
path = "fibonacci.rs"
