[package]
name = "rust-fibonacci"
version.workspace = true
description = "Fibonacci program written in Rust"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }
ctrlc = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }

[[bin]]
name = "rust-fibonacci"
path = "fibonacci.rs"
