[package]
name = "rust-greeter"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Greeter program written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "rust-greeter"
path = "greeter.rs"
