[package]
name = "rust-greeter"
version.workspace = true
description = "Greeter program written in Rust"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true

[[bin]]
name = "rust-greeter"
path = "src/greeter.rs"

[dependencies]
