[package]
name = "rust-hello"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Hello World program written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "rust-hello"
path = "hello.rs"
