[package]
name = "rust-hello"
version.workspace = true
description = "Hello World program written in Rust"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true

[[bin]]
name = "rust-hello"
path = "src/hello.rs"

[dependencies]
